# playtolearn

./: CMakeLists.txt  FindX11.cmake  IrrlichtInstallUnix.sh  LocalFindPythonLibs.cmake  Makefile  OldMakefile  build-js.sh  cpplint.py  gp_command_readme.txt  main.cpp  python_function.cpp  python_function.hpp  python_function_test.cpp
OSXResources/: Info.plist
src/: CMakeLists.txt  InteractionResponse.cpp  InteractionResponse.hpp  TextInteractionResponse.cpp  TextInteractionResponse.hpp  TextResponse.cpp  TextResponse.hpp  UniqueID.hpp  main.cpp  python_function.cpp  python_function.hpp
src/backend/: AttributeMap.cpp  AttributeMap.hpp  AttributeMap.hpp.orig  CMakeLists.txt  Engine.cpp  Engine.hpp  Level.cpp  Level.hpp  Object.cpp  Object.hpp  PythonFunction.cpp  PythonFunction.hpp  PythonTransitionFn.cpp  PythonTransitionFn.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  TransitionFn.cpp  TransitionFn.hpp  UniqueID.hpp  python_function.cpp
src/frontend/: CMakeLists.txt  FEEngine.cpp  FreeResponseAnswerInteraction.cpp  FreeResponseAnswerInteraction.hpp  FreeResponseResponse.cpp  FreeResponseResponse.hpp  GenericInteraction.cpp  GenericInteraction.hpp  Interaction.cpp  Interaction.hpp  InteractionPrompts.hpp  InteractionResponse.cpp  InteractionResponse.hpp  InteractionResponses.hpp  Interactions.hpp  MultipleChoiceAnswerInteraction.cpp  MultipleChoiceAnswerInteraction.hpp  MultipleChoiceResponse.cpp  MultipleChoiceResponse.hpp  TextAnswerInteraction.cpp  TextAnswerInteraction.hpp  TextResponse.cpp  TextResponse.hpp
src/frontend/display/: Display.cpp  Display.cpp.orig  Display.hpp
src/frontend/display/graphics/: IrrlichtDisplay.cpp  IrrlichtDisplay.hpp
src/frontend/display/text/: TextDisplay.cpp  TextDisplay.hpp
src/frontend/interactions/: FreeResponseAnswer.cpp  FreeResponseAnswer.hpp  FreeResponseAnswerInteraction.cpp  FreeResponseAnswerInteraction.hpp  FreeResponsePrompt.cpp  FreeResponsePrompt.hpp  FreeResponseResponse.cpp  FreeResponseResponse.hpp  GenericInteraction.cpp  GenericInteraction.hpp  Interaction.cpp  Interaction.hpp  InteractionPrompt.cpp  InteractionPrompt.hpp  InteractionResponse.cpp  InteractionResponse.hpp  MultipleChoiceAnswer.cpp  MultipleChoiceAnswer.hpp  MultipleChoiceAnswerInteraction.cpp  MultipleChoiceAnswerInteraction.hpp  MultipleChoicePrompt.cpp  MultipleChoicePrompt.hpp  MultipleChoiceResponse.cpp  MultipleChoiceResponse.hpp  TextAnswer.cpp  TextAnswer.hpp  TextAnswerInteraction.cpp  TextAnswerInteraction.hpp  TextPrompt.cpp  TextPrompt.hpp  TextResponse.cpp  TextResponse.hpp
src/midend/: FreeResponseResponse.cpp  FreeResponseResponse.hpp  GenericInteraction.cpp  GenericInteraction.hpp  Interaction.cpp  Interaction.hpp  InteractionResponse.cpp  InteractionResponse.hpp  TextAnswerInteraction.cpp  TextAnswerInteraction.hpp  TextResponse.cpp  TextResponse.hpp
src/test/: PythonFunctionTest.cpp  SampleTextGame.cpp  python_function_test.cpp
src/test/backend/: AttributeMapTest.cpp  PythonFunctionTest.cpp  StateMachineTest.cpp  StateTest.cpp  TransitionFnTest.cpp
src/test/util/: UniqueIDTest.cpp
src/ui/: CMakeLists.txt  FreeResponseNodePolicy.hpp  FreeResponseTransitionNodePolicy.hpp  MultipleChoiceNodePolicy.hpp  MultipleChoiceTransitionNodePolicy.hpp  Node.cpp  Node.hpp  NodeArcLine.cpp  NodeArcLine.hpp  NodeAttacherVisitor.cpp  NodeAttacherVisitor.hpp  NodeCreator.cpp  NodeCreator.hpp  NodeFinalizationVisitor.hpp  NodeItem.cpp  NodeItem.hpp  NodeLine.cpp  NodeLine.hpp  NodePolicy.hpp  NodeScene.cpp  NodeScene.hpp  StateItem.cpp  StateItem.hpp  StateNode.cpp  StateNode.hpp  TextTransitionNodePolicy.hpp  TransitionNode.hpp  TransitionNodeCreator.hpp  UIMenuBar.cpp  UIMenuBar.hpp  UISidePanel.cpp  UISidePanel.hpp  main.cpp  main.css  quests.html  quests.php
src/ui-js-old/: main.css  quests.html
src/ui-js-old/js/: DropHandlers.js  Graph.js  Quest.js  QuestCanvas.js  Table.js  Task.js  TaskDisplay.js
src/ui-old/: quests.html
src/ui-old/js/: Exception.js  Graph.js  Logging.js  Margin.js  Quest.js  QuestCanvas.js  Table.js  Task.js
src/ui-old/util/: template.php
src/ui-qt/: NodeFinalizationVisitor.cpp  NodeLine.cpp  NodeLine.hpp  NodeScene.cpp  NodeScene.hpp  NodeVisitor.hpp  TextTransitionNodePolicy.hpp  TransitionNode.cpp  TransitionNodeCreator.cpp  TransitionNodePolicy.hpp  UIMenuBar.cpp  UIMenuBar.hpp  UISidePanel.hpp  UITextBoxWithLabel.cpp  UITextBoxWithLabel.hpp
src/ui/js/: Graph.js  Margin.js  Quest.js  QuestCanvas.js  Task.js  TaskDisplay.js  base.js
src/ui/js/component/: dragdropdecorators.js  selctabledecorator.js  sidebardecorator.js
src/util/: CMakeLists.txt  Constants.cpp  Constants.hpp  ErrorTypes.cpp  ErrorTypes.hpp  UniqueID.hpp
test_src/: CMakeLists.txt
test_src/backend/: AttributeMapTest.cpp  StateMachineTest.cpp
tmpsrc/: Engine.cpp  Engine.hpp  InteractionResponse.cpp  InteractionResponse.hpp  State.cpp  State.hpp  StateMachine.hpp  TransitionFn.cpp  TransitionFn.hpp  UniqueID.hpp  compile-test.cpp
